--- a/index.html
+++ b/index.html
@@ -49,33 +49,56 @@
         </div>
 
         <div class="row">
-            <section id="stats" class="col-lg-7">
+            <section >
                 <h3 class="text-center">Stats</h3>
                 <div class="row">
-                    <div class="col-lg-3">HP: <span id="hp"></span></div>
-                    <div class="col-lg-3">MPPerLevel: <span id="hpPerLevel"></span></div>
-                    <div class="col-lg-3">MP: <span id="mp"></span></div>
-                    <div class="col-lg-3">MPPerLevel: <span id="mpPerLevel"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/1/17/Health_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203537">
+                         <span id="hp"></span></div>
+
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/8/8b/Mana_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203540"> 
+                        MP: <span id="mp"></span></div>
+
                 </div>
+
                 <div class="row">
-                    <div class="col-lg-3">Armor: <span id="arm"></span></div>
-                    <div class="col-lg-3">ArmorPerLevel: <span id="armpl"></span></div>
-                    <div class="col-lg-3">SpellBlock: <span id="sb"></span></div>
-                    <div class="col-lg-3">SBPerLevel: <span id="sbpl"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/f/f0/Armor_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203442"> 
+                        Armor: <span id="arm"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/8/84/Magic_resistance_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203539"> 
+                        SpellBlock: <span id="sb"></span></div>
+
                 </div>
+
                 <div class="row">
-                    <div class="col-lg-3">HpRegen: <span id="hpr"></span></div>
-                    <div class="col-lg-3">HPregenPerLevel: <span id="hprpl"></span></div>
-                    <div class="col-lg-3">MPRegen: <span id="mpr"></span></div>
-                    <div class="col-lg-3">MPRegenPerLevel: <span id="mprpl"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/3/31/Health_regeneration_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203536"> 
+                        HpRegen: <span id="hpr"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/0/0c/Mana_regeneration_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203539"> 
+                        MPRegen: <span id="mpr"></span></div>
                 </div>
+
                 <div class="row">
-                    <div class="col-lg-3">AD: <span id="ad"></span></div>
-                    <div class="col-lg-3">ADPerLevel: <span id="adpl"></span></div>
-                    <div class="col-lg-3">ASpeed: <span id="as"></span></div>
-                    <div class="col-lg-3">ASPerLevel: <span id="aspl"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/7/75/Attack_damage_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203443"> 
+                        AD: <span id="ad"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/9/91/Attack_speed_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203443">
+                        ASpeed: <span id="as"></span></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/e/ea/Movement_speed_icon.png/revision/latest/scale-to-width-down/14?cb=20170515203540"> 
+                        MoveSpeed: <span id="ms"></span></div>
+                    <div class="col-lg-3">
+                        <img src="https://vignette.wikia.nocookie.net/leagueoflegends/images/1/13/Range_icon.png/revision/latest/scale-to-width-down/14?cb=20170715002053">
+                        Attack Range: <span id="ar"></span></div>
                 </div>
             </section>
+
             <section id="" class="col-lg-5  ">
                 <h3 class="text-center">Attributes</h3>
                 <canvas id="polar-chart" width="300" height="200"></canvas>
